@@ -13,6 +13,7 @@
 import sys
 
 PY2 = sys.version_info[0] == 2
+PYPY = hasattr(sys, 'pypy_translation_info')
 _identity = lambda x: x
 
 
